--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-family: 'Roboto';
 }
 
 header {
@@ -24,4 +25,10 @@ header input {
 
 .non-active {
   background: red;
+}
+
+.item {
+  padding: 20px;
+  box-sizing: border-box;
+  border-bottom: 1px solid grey;
 }
